--- a/src/app/basic-info/basic-info.component.html
+++ b/src/app/basic-info/basic-info.component.html
@@ -15,7 +15,7 @@
       </div>
     </div>
   </nav>
-  <p>BASIC</p>
+  <p>basic</p>
 
   <div class="progress">
       <div class="progress-bar" role="progressbar" aria-label="Segment one" style="width: 33.33%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
